--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,9 +7,7 @@ text-align: center;
 
 #header
 {
-width: 90%;
-margin: 10px auto;
-margin-bottom: 0;
+width: 95%;
 background-color: #003366;
 border: 1px solid gray;
 }
@@ -17,82 +15,13 @@ border: 1px solid gray;
 #header h1
 {
 padding: 10px;
-font-size: xx-large;
-font-family: sans-serif;
 text-align: right;
 color: #FFFFF3;
-background-color: #003366;
-}
-
-#container
-{
-width: 90%;
-margin: 10px auto;
-margin-bottom: 0;
-margin-top: 0;
-background-color: #FFFFF3;
-border: 1px solid gray;
-}
-
-#navbar
-{
-float: left;
-position: fixed;
-margin: 2em 0 0 0;
-padding: 0;
-}
-
-#navbar ul
-{
-list-style-type: none;
-margin: 0;
-padding: 0;
-}
-
-#navbar li
-{
-margin: 0 0 0.4em 0;
-}
-
-#navbar a
-{
-display: block;
-width: 8em;
-padding: 0.2em 1em;
-color: #FFFFFF;
-background-color: #003366;
-text-decoration: none;
-font-family: sans-serif;
-text-align: left;
-}
-
-#navbar a:hover
-{
-width: 7.5em;
-border-right: 0.5em solid #336699;
-}
-
-#content
-{
-margin-left: 10em;
-border-left: 1px solid gray;
-padding: 1em;
-max-width: 36em;
-min-height: 12em;
-text-align: left;
-/* background-color: #FFFFF3; */
-}
-
-#content h1
-{
-margin: 0 0 0.5em 0
 }
 
 #footer
 {
-width: 90%;
-margin: 10px auto;
-margin-top: 0;
+width: 95%;
 background-color: #003366;
 border: 1px solid gray;
 text-align: left;
@@ -101,17 +30,15 @@ text-align: left;
 #footer p
 {
 padding-left: 10px;
-font-family: sans-serif;
 font-size: small;
 font-weight: bold;
 color: #FFFFF3;
-background-color: #003366;
 }
 
 #footer a
 {
 color: #FFFFF3;
-background-color: #003366;
+font-weight: normal;
 }
 
 #footer a:hover
@@ -124,12 +51,76 @@ color: #AAAAAA;
 color: #CCCCAA;
 text-align: center;
 font-size: x-small;
-padding-bottom: 10px;
 }
 
-td
+#container
 {
-vertical-align:top;
+width: 95%;
+background-color: #FFFFF3;
+border: 1px solid gray;
+}
+
+#content
+{
+margin-left: 120px;
+border-left: 1px solid gray;
+padding: 10px;
+max-width: 65%;
+min-height: 200px;
+text-align: left;
+background-color: #FFFFF3;
+}
+
+#navbar
+{
+float: left;
+padding-top: 10px;
+}
+
+#navbar ul
+{
+list-style-type: none;
+margin: 0;
+padding: 0;
+}
+
+#navbar li
+{
+margin-bottom: 5px;
+}
+
+#navbar a
+{
+display: block;
+width: 100px;
+padding: 5px 10px;
+text-align: left;
+text-decoration: none;
+color: #FFFFFF;
+background-color: #003366;
+}
+
+#navbar a:hover
+{
+width: 95px;
+border-right: 5px solid #336699;
+}
+
+/* toch2: table of contents for h2 items */
+li.toch2
+{
+margin: 0;
+}
+
+li.toch3
+{
+margin: 0 0 0 2em;
+}
+
+li.toch3 a
+{
+font-weight: normal;
+font-style: italic;
 }
 
 a
@@ -144,45 +135,60 @@ a:hover
 color:#666666;
 }
 
-.section
+h2
 {
+clear: right;
 padding-top: 20px;
-font-size:large;
-font-weight:bold;
+font-size: large;
+font-weight: bold;
 }
 
-.subsection
+h3
 {
-font-size:medium;
-font-weight:bold;
+clear: right;
+font-size: medium;
+font-size: bold;
 }
 
-.subsubsection
+p
 {
-font-weight:bold;
+clear: right;
 }
 
-li.menu-section
+dl
 {
-margin: 0;
+clear: right;
 }
 
-li.menu-section a
+dt
 {
-font-weight:bold;
-text-decoration:none;
+font-family: monospace;
 }
 
-li.menu-subsection
+.figure
 {
-margin: 0 0 0 2em;
+float: right;
+width: 320px;
+margin-left: 5px;
+margin-bottom: 5px;
+padding: 10px;
+background-color: #DDDDDD;
+border: 1px solid #CC0000;
 }
 
-li.menu-subsection a
+.figure a img
 {
-font-weight:normal;
-font-style:italic;
-text-decoration:none;
+border: 0;
+padding-bottom: 10px;
+width: 300px;
+max-width: 300px;
+}
+
+.figure p
+{
+margin: 0px;
+font-size: 80%;
+font-style: italic;
 }
 
 .warning
@@ -191,52 +197,12 @@ color:#CC0000;
 font-weight:normal;
 }
 
-.note
-{
-font-size:smaller;
-font-style:italic;
-}
-
-.figure
-{
-float: right;
-width: 300px;
-margin: 0 0 10px 10px;
-padding: 10px;
-background-color: #DDDDDD;
-border: 1px solid #CC0000;
-font-size: small;
-font-style: italic;
-}
-
-.figure a img
-{
-border: 0;
-margin: 0 0 10px 0;
-width: 260px;
-}
-
-p
-{
-clear:right;
-}
-
 .code
 {
 font-family: monospace,sans-serif;
-/* overflow: scroll; */
+overflow: auto;
 background-color: #DDDDDD;
-margin: 0 0 10px 0;
+margin-bottom: 10px;
 padding: 5px;
 border: 1px solid #CC0000;
-}
-
-dt
-{
-font-family: monospace;
-}
-
-ul
-{
-list-style-type: circle;
 }
